--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "next start",
         "lint": "next lint",
         "prepare": "husky",
+        "postinstall":"pnpm dlx prisma generate",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
@@ -21,11 +22,13 @@
         "@huggingface/inference": "^2.8.0",
         "@mailchimp/mailchimp_marketing": "^3.0.80",
         "@portabletext/react": "^3.1.0",
-        "@prisma/client": "5.18.0",
+        "@prisma/client": "6.6.0",
+        "@radix-ui/react-accordion": "^1.2.7",
         "@radix-ui/react-avatar": "^1.1.0",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-hover-card": "^1.1.1",
+        "@radix-ui/react-popover": "^1.1.8",
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
@@ -42,7 +45,11 @@
         "@t3-oss/env-nextjs": "^0.11.0",
         "@tailwindcss/container-queries": "^0.1.1",
         "@tailwindcss/typography": "^0.5.14",
-        "@tanstack/react-query": "^5.59.0",
+        "@tanstack/react-query": "^5.74.4",
+        "@trpc/client": "^11.1.0",
+        "@trpc/next": "^11.1.0",
+        "@trpc/react-query": "^11.1.0",
+        "@trpc/server": "^11.1.0",
         "@types/react": "^18.3.3",
         "@types/speakingurl": "^13.0.6",
         "@upstash/redis": "^1.34.6",
@@ -53,6 +60,7 @@
         "axios": "^1.7.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "codemirror-lang-r": "0.1.0-2",
         "date-fns": "^3.6.0",
         "framer-motion": "^11.3.23",
@@ -65,10 +73,8 @@
         "next-seo": "^6.5.0",
         "next-themes": "^0.3.0",
         "nextjs-toploader": "^1.6.12",
-        "openai": "^4.55.1",
         "plaiceholder": "^3.0.0",
         "posthog-js": "^1.167.0",
-        "prisma": "^5.18.0",
         "promise": "^8.3.0",
         "query-string": "^9.1.0",
         "react": "18.3.1",
@@ -92,12 +98,14 @@
         "slugify": "^1.6.6",
         "speakingurl": "^14.0.1",
         "styled-components": "^6.1.8",
+        "superjson": "^2.2.2",
         "suspend-react": "^0.1.3",
         "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7",
         "use-debounce": "^10.0.2",
         "usehooks-ts": "^3.1.0",
-        "zod": "^3.23.8"
+        "vaul": "^1.1.2",
+        "zod": "^3.24.3"
     },
     "devDependencies": {
         "@clerk/types": "^4.12.1",
@@ -117,9 +125,10 @@
         "eslint-config-next": "14.2.5",
         "husky": "^9.1.4",
         "postcss": "^8.4.41",
+        "prisma": "^6.6.0",
         "standard-version": "^9.5.0",
         "tailwindcss": "^3.4.8",
-        "typescript": "^5.5.4"
+        "typescript": "^5.8.3"
     },
     "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
