--- a/package.json
+++ b/package.json
@@ -8,127 +8,128 @@
         "start": "next start",
         "lint": "next lint",
         "prepare": "husky",
-        "postinstall":"pnpm dlx prisma generate",
+        "postinstall": "pnpm dlx prisma generate",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-        "@ai-sdk/google": "^1.2.5",
-        "@ai-sdk/openai": "^0.0.43",
-        "@ai-sdk/react": "^1.2.5",
-        "@clerk/nextjs": "^5.2.14",
-        "@fontsource-variable/bricolage-grotesque": "^5.0.7",
-        "@fontsource-variable/lora": "^5.0.18",
-        "@fontsource/inter": "^5.0.20",
-        "@huggingface/inference": "^2.8.0",
+        "@ai-sdk/google": "^1.2.13",
+        "@ai-sdk/openai": "^1.3.18",
+        "@ai-sdk/react": "^1.2.9",
+        "@clerk/nextjs": "^6.18.0",
+        "@fontsource-variable/bricolage-grotesque": "^5.2.6",
+        "@fontsource-variable/lora": "^5.2.5",
+        "@fontsource/inter": "^5.2.5",
+        "@huggingface/inference": "^3.8.2",
         "@mailchimp/mailchimp_marketing": "^3.0.80",
-        "@portabletext/react": "^3.1.0",
+        "@portabletext/react": "^3.2.1",
         "@prisma/client": "6.6.0",
-        "@radix-ui/react-accordion": "^1.2.7",
-        "@radix-ui/react-avatar": "^1.1.0",
-        "@radix-ui/react-dialog": "^1.1.1",
-        "@radix-ui/react-dropdown-menu": "^2.1.1",
-        "@radix-ui/react-hover-card": "^1.1.1",
-        "@radix-ui/react-popover": "^1.1.8",
-        "@radix-ui/react-select": "^2.1.1",
-        "@radix-ui/react-separator": "^1.1.0",
-        "@radix-ui/react-slot": "^1.1.0",
-        "@radix-ui/react-tabs": "^1.1.0",
-        "@radix-ui/react-toggle": "^1.1.0",
-        "@sanity/asset-utils": "^1.3.0",
-        "@sanity/code-input": "^4.1.4",
-        "@sanity/icons": "^3.3.1",
-        "@sanity/image-url": "^1.0.2",
-        "@sanity/preview-url-secret": "^1.6.19",
-        "@sanity/table": "^1.1.2",
-        "@sanity/ui": "^2.8.8",
-        "@sanity/vision": "^3.29.1",
-        "@t3-oss/env-nextjs": "^0.11.0",
+        "@radix-ui/react-accordion": "^1.2.8",
+        "@radix-ui/react-avatar": "^1.1.7",
+        "@radix-ui/react-dialog": "^1.1.11",
+        "@radix-ui/react-dropdown-menu": "^2.1.12",
+        "@radix-ui/react-hover-card": "^1.1.11",
+        "@radix-ui/react-popover": "^1.1.11",
+        "@radix-ui/react-select": "^2.2.2",
+        "@radix-ui/react-separator": "^1.1.4",
+        "@radix-ui/react-slot": "^1.2.0",
+        "@radix-ui/react-tabs": "^1.1.9",
+        "@radix-ui/react-toggle": "^1.1.6",
+        "@sanity/asset-utils": "^2.2.1",
+        "@sanity/code-input": "^5.1.2",
+        "@sanity/icons": "^3.7.0",
+        "@sanity/image-url": "^1.1.0",
+        "@sanity/preview-url-secret": "^2.1.8",
+        "@sanity/table": "^1.1.3",
+        "@sanity/ui": "^2.15.13",
+        "@sanity/vision": "^3.86.1",
+        "@t3-oss/env-nextjs": "^0.13.0",
         "@tailwindcss/container-queries": "^0.1.1",
-        "@tailwindcss/typography": "^0.5.14",
+        "@tailwindcss/postcss": "^4.1.4",
+        "@tailwindcss/typography": "^0.5.16",
         "@tanstack/react-query": "^5.74.4",
-        "@trpc/client": "^11.1.0",
-        "@trpc/next": "^11.1.0",
-        "@trpc/react-query": "^11.1.0",
-        "@trpc/server": "^11.1.0",
-        "@types/react": "^18.3.3",
+        "@trpc/client": "^11.1.1",
+        "@trpc/next": "^11.1.1",
+        "@trpc/react-query": "^11.1.1",
+        "@trpc/server": "^11.1.1",
+        "@types/react": "^19.1.2",
         "@types/speakingurl": "^13.0.6",
-        "@upstash/redis": "^1.34.6",
-        "@vercel/analytics": "^1.3.1",
-        "@vercel/kv": "^2.0.0",
-        "@vercel/speed-insights": "^1.0.12",
-        "ai": "^4.2.10",
-        "axios": "^1.7.3",
-        "class-variance-authority": "^0.7.0",
+        "@upstash/redis": "^1.34.8",
+        "@vercel/analytics": "^1.5.0",
+        "@vercel/kv": "^3.0.0",
+        "@vercel/speed-insights": "^1.2.0",
+        "ai": "^4.3.9",
+        "axios": "^1.8.4",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
-        "codemirror-lang-r": "0.1.0-2",
-        "date-fns": "^3.6.0",
-        "framer-motion": "^11.3.23",
+        "codemirror-lang-r": "0.1.1",
+        "date-fns": "^4.1.0",
+        "framer-motion": "^12.8.2",
         "gray-matter": "^4.0.3",
-        "hamburger-react": "^2.5.1",
+        "hamburger-react": "^2.5.2",
         "js-cookie": "^3.0.5",
-        "lucide-react": "^0.447.0",
-        "next": "14.2.5",
-        "next-sanity": "^9.4.4",
-        "next-seo": "^6.5.0",
-        "next-themes": "^0.3.0",
-        "nextjs-toploader": "^1.6.12",
+        "lucide-react": "^0.503.0",
+        "next": "15.3.1",
+        "next-sanity": "^9.10.2",
+        "next-seo": "^6.6.0",
+        "next-themes": "^0.4.6",
+        "nextjs-toploader": "^3.8.16",
         "plaiceholder": "^3.0.0",
-        "posthog-js": "^1.167.0",
+        "posthog-js": "^1.236.5",
         "promise": "^8.3.0",
-        "query-string": "^9.1.0",
-        "react": "18.3.1",
+        "query-string": "^9.1.1",
+        "react": "19.1.0",
         "react-cool-dimensions": "^3.0.1",
-        "react-dom": "18.3.1",
-        "react-error-boundary": "^4.0.13",
-        "react-icons": "^5.2.1",
-        "react-markdown": "^9.0.1",
+        "react-dom": "19.1.0",
+        "react-error-boundary": "^5.0.0",
+        "react-icons": "^5.5.0",
+        "react-markdown": "^10.1.0",
         "react-player": "^2.16.0",
-        "react-syntax-highlighter": "^15.5.0",
-        "recharts": "^2.12.7",
+        "react-syntax-highlighter": "^15.6.1",
+        "recharts": "^2.15.3",
         "rehype-raw": "^7.0.0",
-        "remark-gfm": "^4.0.0",
-        "resend": "^4.0.0",
-        "sanity": "^3.53.0",
-        "sanity-plugin-asset-source-unsplash": "^3.0.1",
-        "sanity-plugin-iframe-pane": "^3.1.6",
+        "remark-gfm": "^4.0.1",
+        "resend": "^4.4.0",
+        "sanity": "^3.86.1",
+        "sanity-plugin-asset-source-unsplash": "^3.0.3",
+        "sanity-plugin-iframe-pane": "^3.2.1",
         "sanity-plugin-vercel-deploy": "^3.3.4",
-        "sass": "^1.77.8",
+        "sass": "^1.87.0",
         "server-only": "^0.0.1",
         "slugify": "^1.6.6",
         "speakingurl": "^14.0.1",
-        "styled-components": "^6.1.8",
+        "styled-components": "^6.1.17",
         "superjson": "^2.2.2",
         "suspend-react": "^0.1.3",
-        "tailwind-merge": "^2.4.0",
+        "tailwind-merge": "^3.2.0",
         "tailwindcss-animate": "^1.0.7",
-        "use-debounce": "^10.0.2",
-        "usehooks-ts": "^3.1.0",
+        "use-debounce": "^10.0.4",
+        "usehooks-ts": "^3.1.1",
         "vaul": "^1.1.2",
         "zod": "^3.24.3"
     },
     "devDependencies": {
-        "@clerk/types": "^4.12.1",
-        "@commitlint/cli": "^19.4.0",
-        "@commitlint/config-conventional": "^19.2.2",
-        "@tanstack/eslint-plugin-query": "^5.59.1",
-        "@tanstack/react-query-devtools": "^5.59.0",
-        "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+        "@clerk/types": "^4.55.1",
+        "@commitlint/cli": "^19.8.0",
+        "@commitlint/config-conventional": "^19.8.0",
+        "@tanstack/eslint-plugin-query": "^5.73.3",
+        "@tanstack/react-query-devtools": "^5.74.6",
+        "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@types/js-cookie": "^3.0.6",
-        "@types/mailchimp__mailchimp_marketing": "^3.0.20",
-        "@types/node": "^22.1.0",
-        "@types/react-dom": "^18.3.0",
+        "@types/mailchimp__mailchimp_marketing": "^3.0.21",
+        "@types/node": "^22.14.1",
+        "@types/react-dom": "^19.1.2",
         "@types/react-syntax-highlighter": "^15.5.13",
-        "autoprefixer": "^10.4.20",
-        "commitlint": "^19.4.0",
-        "eslint": "8.57.0",
-        "eslint-config-next": "14.2.5",
-        "husky": "^9.1.4",
-        "postcss": "^8.4.41",
+        "autoprefixer": "^10.4.21",
+        "commitlint": "^19.8.0",
+        "eslint": "9.25.1",
+        "eslint-config-next": "15.3.1",
+        "husky": "^9.1.7",
+        "postcss": "^8.5.3",
         "prisma": "^6.6.0",
         "standard-version": "^9.5.0",
-        "tailwindcss": "^3.4.8",
+        "tailwindcss": "^4.1.4",
         "typescript": "^5.8.3"
     },
-    "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
+    "packageManager": "pnpm@10.9.0"
 }
